--- a/translations/de.json
+++ b/translations/de.json
@@ -423,5 +423,6 @@
     "tollDomainStatus9": "Inactiv",
     "tollDomainStatus99": "Inactiv",
     "tollDomainStatus-1": "Inactiv",
-    "searchTollDomain" : "Cautati domeniu taxabil"
+    "searchTollDomain" : "Cautati domeniu taxabil",
+    "penalties": "Penalties"
 }
