--- a/translations/ro.json
+++ b/translations/ro.json
@@ -425,5 +425,6 @@
     "tollDomainStatus99": "Inactiv",
     "tollDomainStatus-1": "Inactiv",
     "searchTollDomain": "Cautati domeniu taxabil",
-    "penalties": "Penalități"
+    "penalties": "Penalități",
+    "selectedInvoicesAmount": "Total facturi selectate"
 }
