--- a/translations/de.json
+++ b/translations/de.json
@@ -424,5 +424,6 @@
     "tollDomainStatus99": "Inactiv",
     "tollDomainStatus-1": "Inactiv",
     "searchTollDomain": "Cautati domeniu taxabil",
-    "penalties": "Penalties"
+    "penalties": "Penalties",
+    "selectedInvoicesAmount": "Total facturi selectate"
 }
