--- a/translations/hu.json
+++ b/translations/hu.json
@@ -425,5 +425,6 @@
     "tollDomainStatus99": "Inactiv",
     "tollDomainStatus-1": "Inactiv",
     "searchTollDomain": "Cautati domeniu taxabil",
-    "penalties": "Penalties"
+    "penalties": "Penalties",
+    "selectedInvoicesAmount": "Total facturi selectate"
 }
